--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,19 @@ body {
 	width:100%;
 	height:100%
 }
+.forecast-tab {
+	background-color:#1F3169;
+	color: #CCCCCC;
+	padding-top: 12px;
+	padding-bottom: 10px;
+	padding-left: 15px;
+	border-top-width: thin;
+	border-bottom-width: thin;
+	border-top-style: solid;
+	border-bottom-style: none;
+	border-top-color: #F0F0F0;
+	border-bottom-color: #F0F0F0;
+}
+.forecast-link span:hover {
+	text-decoration: underline;
+}
